@@ -28,6 +28,7 @@ Cutthrough cancelled by presence of postmaster verify
   SMTP>> RCPT TO:<postmaster@localhost>
   SMTP<< 550 NO
   SMTP>> QUIT
+  SMTP(close)>>
 wrote callout cache domain record for localhost:
   result=1 postmaster=2 random=0
 wrote positive callout cache address record for Ok@localhost
@@ -70,6 +71,7 @@ Connecting to 127.0.0.1 [127.0.0.1]:1224 ... connected
   SMTP>> RCPT TO:<NOTok@elsewhere>
   SMTP<< 550 NO
   SMTP>> QUIT
+  SMTP(close)>>
 wrote callout cache domain record for elsewhere:
   result=1 postmaster=0 random=0
 wrote negative callout cache address record for NOTok@elsewhere
@@ -103,6 +105,7 @@ Connecting to 127.0.0.1 [127.0.0.1]:1224 ... connected
   SMTP>> RCPT TO:<NOTok2@elsewhere>
   SMTP<< 550 NO
   SMTP>> QUIT
+  SMTP(close)>>
 wrote callout cache domain record for elsewhere:
   result=1 postmaster=0 random=0
 wrote negative callout cache address record for NOTok2@elsewhere
