@@ -89,5 +89,6 @@ MUNGED: ::1 will be omitted in what follows
 >>> accept: condition test succeeded in ACL "ar"
 >>> end of ACL "ar": ACCEPT
 >>>   SMTP>> QUIT
+>>>   SMTP(close)>>
 >>> ----------- cutthrough shutdown (host-checking mode) ------------
 LOG: 10HmaY-0005vi-00 <= CALLER@myhost.test.ex H=(myhost.test.ex) [1.2.3.4] P=esmtp S=sss for verify@domain.com
