@@ -57,6 +57,7 @@ MUNGED: ::1 will be omitted in what follows
 >>>   SMTP<< 250 Accepted
 >>>   SMTP>> QUIT
 >>> cmd buf flush 6 bytes
+>>>   SMTP(close)>>
 >>> wrote callout cache domain record for dane256ee.test.ex:
 >>>   result=1 postmaster=0 random=0
 >>> wrote positive callout cache address record for CALLER@dane256ee.test.ex
